🔒 보안 설정 강화 및 취약점 수정 ## 변경 사항 - @EnableMethodSecurity 추가로 메서드 레벨 보안 활성화 - H2 콘솔 인증 스킵 제거 (보안 취약점 수정) - OAuth2 허용 호스트를 설정 파일에서 동적으로 추출 - 프로덕션 환경에서 Swagger UI 접근 제한 - application-prod.properties 프로덕션 전용 설정 추가 - SECURITY-GUIDE.md 보안 설정 가이드 문서 추가 - application.properties에 보안 경고 주석 강화 ## 테스트 - 관련 테스트 코드 업데이트 완료 - 모든 테스트 통과 확인